# ifit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cspell.config.yaml  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
docs/: ACTIVATION_DISCOVERY.md  FTMS.md  IFIT_PROTOCOL.md  USER_GUIDE.md
ifit/: __init__.py  __main__.py  _scanner.py  _simulated_server.py
ifit/cli/: __init__.py  _device.py  _discovery.py  _main.py  _monitor.py  _relay.py
ifit/client/: __init__.py  _client.py  codes.csv  protocol.py
ifit/ftms/: __init__.py  _cli.py  _ftms.py  _server.py
ifit/interceptor/: __init__.py  _discovery.py
scripts/: discover_unknown_characteristics.py  format.sh  lint.sh  quick_scan.py  scan_device.py  setup.sh  test.sh  try_all_codes.py
tests/: __init__.py  conftest.py  test_example.py
